# LeWAM

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.py  setup.sh
.github/workflows/: tests.yml
configs/model/: baby.yaml  base.yaml  base_action_only.yaml  large.yaml  micro.yaml  small.yaml  small_action_only.yaml
configs/train/: cube_single_task.yaml  cube_single_task_action_only.yaml  cube_single_task_joint.yaml  cube_single_task_video_only.yaml  default.yaml  finetune.yaml  finetune_resume.yaml  full_community_base_model_april4.yaml  multitask_finetune_april8.yaml  multitask_finetune_resume_april9.yaml  overfit.yaml  pretrain.yaml
configs/train/v0_2/: default.yaml  finetune_resume.yaml  full_community_base_model_april4.yaml  overfit.yaml  pretrain.yaml
docs/: LeWAM_v0_1.md  LeWAM_v0_2.md  LeWAM_v0_3.md  TODO.md  architecture_reading_notes.md  cluster_ffmpeg_fix.md  wan_flow_matching_simplified.py
paper/: architecture.tex  architecture_standalone.tex  attn_mask.tex  generate_figures.py  main.tex  ref.bib
paper/scripts/: dataset_grid.py  gen_attn_mask.py
paper/sections/: appendix.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex  results.tex
src/lewam/datasets/: community_dataset.py
src/lewam/models/: action_encoders.py  common.py  lewam.py  video_encoder.py  vlm_encoder.py
src/scripts/: test_vjepa2_1.py  test_vjepa2_load.py
tests/: run_tests.sh  test_common.py  test_dit.py  test_idm.py  test_lewam.py  test_sigreg.py  test_vjepa2_load.py
(+76 files in other folders)
