[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lewam"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.11",
    "torchvision>=0.26",
    "torchcodec>=0.11",
    "transformers>=5.3",
    "timm>=1.0",
    "einops>=0.8",
    "accelerate>=1.13",
    "numpy>=2.4",
    "opencv-python>=4.13",
    "pillow>=11.0",
    "matplotlib>=3.10",
    "scikit-learn>=1.8",
    "scipy>=1.17",
    "huggingface-hub>=1.8",
    "safetensors>=0.7",
    "tokenizers>=0.22",
]
